--- a/Create User/index.html
+++ b/Create User/index.html
@@ -18,13 +18,12 @@
       </div>
       <div>
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-      </div>
-      <div>
-        <button type="submit">Create User</button>
+        <input type="password" id="password" name="password" minlength="8" required>
+        <button type="submit" id="signup-btn" disabled>Sign Up</button>
       </div>
     </form>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
+
