--- a/CreateUser/index.html
+++ b/CreateUser/index.html
@@ -6,8 +6,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Create User</h1>
+    <h1>Allied Personel Finance Tracker</h1>
+    <div class="form-container">
+    <h2>Create User</h2>
     <form id="user-form">
+      <p>If already a user  <a href="D:\Capstone Project\Capstone-Project-Frontend\login\index.html"> Click here</a></p>
       <div>
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
@@ -23,6 +26,8 @@
         <button type="submit" id="signup-btn" disabled>Sign Up</button>
       </div>
     </form>
+    <img src="D:\Capstone Project\kumbh-kalash.png" alt="Logo" id = "image">
+  </div>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
   </body>
