--- a/login/index.html
+++ b/login/index.html
@@ -8,11 +8,13 @@
   <body>
     <h1>Login</h1>
     <form>
+      <p>Not a User already<a href="D:\Capstone Project\Capstone-Project-Frontend\CreateUser\index.html">Sign Up</a></p>
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" required>
       <br>
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required>
+      <p><a href="D:\Capstone Project\Capstone-Project-Frontend\ForgotPassword\index.html">Forgot Password</a></p>
       <br>
       <button type="submit" id="login-btn">Login</button>
     </form>
