--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Dashboard</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+	<title>Dashboard</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <nav style="height: 100vh;">
-        <h2>Logo</h2>
-        <ul class="nav-list" style="justify-content:space-between ;">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Income and Expenses</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">My Profile</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Notification</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      
-       
+	<nav>
+		<ul>
+			<li><a href="#">Dashboard</a></li>
+			<li><a href="#">Sign Out</a></li>
+		</ul>
+	</nav>
+	<main>
+		<section class="grid">
+			<h2>Grid 1</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc auctor elit at justo accumsan, eu fermentum lorem consectetur. Vivamus in tortor a tellus blandit vestibulum.</p>
+		</section>
+		<section class="grid">
+			<h2>Grid 2</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc auctor elit at justo accumsan, eu fermentum lorem consectetur. Vivamus in tortor a tellus blandit vestibulum.</p>
+		</section>
+		<section class="grid">
+			<h2>Grid 3</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc auctor elit at justo accumsan, eu fermentum lorem consectetur. Vivamus in tortor a tellus blandit vestibulum.</p>
+		</section>
+		<section class="grid">
+			<h2>Grid 4</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc auctor elit at justo accumsan, eu fermentum lorem consectetur. Vivamus in tortor a tellus blandit vestibulum.</p>
+		</section>
+	</main>
+	<script src="script.js"></script>
 </body>
 </html>
