--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -14,7 +14,37 @@
 	<main>
 		<section class="grid">
 			<h2>Grid 1</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc auctor elit at justo accumsan, eu fermentum lorem consectetur. Vivamus in tortor a tellus blandit vestibulum.</p>
+			<div>
+<h2>THIS IS TOTAL INCOME PART</h2>
+<h1>Finance Table</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Finances</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Finances</h1>
+  <table id="finances">
+    <thead>
+	</thead>
+		<tbody>
+      <tr>
+        <th>ID</th>
+        <th>Finance Type</th>
+        <th>Tag</th>
+        <th>Invoice Date</th>
+        <th>Amount</th>
+      </tr>
+    </tbody>
+  </table>
+
+
+
+			</div>
 		</section>
 		<section class="grid">
 			<h2>Grid 2</h2>
@@ -29,6 +59,7 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc auctor elit at justo accumsan, eu fermentum lorem consectetur. Vivamus in tortor a tellus blandit vestibulum.</p>
 		</section>
 	</main>
-	<script src="script.js"></script>
+	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
