--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -4,17 +4,7 @@
 	<title>Dashboard</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
-	<nav>
-		<ul>
-			<li><a href="#">Dashboard</a></li>
-			<li><a href="#">Sign Out</a></li>
-		</ul>
-	</nav>
-	<main>
-		<section class="grid">
-			<h2>Grid 1</h2>
-			<div>
+<a href="D:\Capstone Project\Capstone-Project-Frontend\Dashboard\index.html"><img src="D:\Capstone Project\logo.png" alt="Logo" class="logo"></a>
 <h2>THIS IS TOTAL INCOME PART</h2>
 <h1>Finance Table</h1>
 <body>
