--- a/FinanceManagement/finace.html
+++ b/FinanceManagement/finace.html
@@ -1,24 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="finance.css">
-    <title>Profile</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <title>Invoices</title>
 </head>
+
 <body>
-    <div class="grid-container">
-        <div class="grid-item">1</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">3</div>
-        <div class="grid-item">4</div>
-        <div class="grid-item">5</div>
-        <div class="grid-item">6</div>
-        <div class="grid-item">7</div>
-        <div class="grid-item">8</div>
-        <div class="grid-item">9</div>
+  <div class="container mt-3">
+    <div class="row bg-primary text-white mt-2 ">
+      <div class="col">
+        <h2 class="p-2 ">Finances</h2>
       </div>
-    
+    </div>
+    <div class="row mt-3">
+      <div class="col-3">
+        <div class="form-floating">
+          <input type="text" class="form-control" id="txtClient" placeholder="Client" name="client">
+          <label for="txtClient">Category</label>
+        </div>
+        
+      </div>
+      <div class="col-2">
+        <input type="button" value="Serach" class="btn btn-primary" id="btnSearch">
+      </div>
+    </div>
+    <div class="row mt-3">
+      <table class="table table-bordered" id="finances">
+        <thead>
+          <tr>
+            <th>id</th>
+            <th>Finance Type</th>
+            <th>Tag</th>
+            <th>Invoice Date</th>
+            <th>Amount</th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
+
+    </div>
+  </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Confirm </h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          Do You Really Want To Delete ?
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-danger" id="btDl">Delete It</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="./script.js"></script>
 </body>
+
 </html>
