--- a/CreateUser/index.html
+++ b/CreateUser/index.html
@@ -4,33 +4,51 @@
     <meta charset="UTF-8">
     <title>Create User</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
-  <body>
-    <h1>Allied Personel Finance Tracker</h1>
-    <div class="form-container">
-    <h2>Create User</h2>
-    <form id="user-form">
-      <p>If already a user  <a href="D:\Capstone Project\Capstone-Project-Frontend\login\index.html"> Click here</a></p>
-      <div>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
+  <body class="container">
+
+
+    <div class="jumbotron">
+      <a href="D:\Capstone Project\Capstone-Project-Frontend\Dashboard\index.html"><img src="D:\Capstone Project\logo.png" alt="Logo" class="logo"></a>
+      <h1 class="display-4">Allied Personal Finance Tracker</h1>
+    </div>
+
+    <div class="row justify-content-left">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <form id="user-form">
+              <h2 style="height: fit-content;">Create User</h2>
+              <p>If already a user  <a href="D:\Capstone Project\Capstone-Project-Frontend\login\index.html"> Click here</a></p>
+              <div class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" class="form-control" required>
+              </div>
+              <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" class="form-control" required>
+              </div>
+              <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" minlength="8" class="form-control" required>
+                <span id="password-error" class="error-message"></span>
+              </div>
+              <button type="submit" id="signup-btn" class="btn btn-primary" disabled>Sign Up</button>
+            </form>
+          </div>
+        </div>
       </div>
-      <div>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+
+      <div class="col-md-3">
+        <img src="D:\Capstone Project\kumbh-kalash.png" alt="Logo" class="img-fluid">
       </div>
-      <div>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" minlength="8" required>
-        <span id="password-error" class="error-message"></span>
-        <button type="submit" id="signup-btn" disabled>Sign Up</button>
-      </div>
-    </form>
-    <img src="D:\Capstone Project\kumbh-kalash.png" alt="Logo" id = "image">
-  </div>
+    </div>
+
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
