--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -45,6 +45,7 @@
       </div>
       <div class="col-sm-6">
         <section class="grid">
+			<h2>Income vs Expenses</h2>
 			<div class="chart-container">
 				<canvas id="donut-chart"></canvas>
 			</div>       
