--- a/capstone-project-frontend/list-finance.html
+++ b/capstone-project-frontend/list-finance.html
@@ -40,10 +40,11 @@
         <thead>
           <tr>
             <th>Invoice #</th>
-            <th>Client</th>
+            <th>id</th>
+            <th>Finance Type</th>
+            <th>Tag</th>
+            <th>Invoice Date</th>
             <th>Amount</th>
-            <th>Date</th>
-            <th>Action</th>
           </tr>
         </thead>
         <tbody>
@@ -71,7 +72,7 @@
       </div>
     </div>
   </div>
-  <script src="./restapi/list-invoices-api.js"></script>
+  <script src="./restapi/list-finances-api.js"></script>
 </body>
 
 </html>
