--- a/FinanceManagement/index.html
+++ b/FinanceManagement/index.html
@@ -9,7 +9,7 @@
 		<h1>Finance App</h1>
 		<form id="finance-form">
 			<label for="userId">User ID:</label>
-			<input type="number" id="userId" name="userId" required><br><br>
+			<!-- <input type="number" id="userId" name="userId" required><br><br> -->
 			<label for="financeType">Finance Type:</label>
 			<select id="financeType" name="financeType" required>
 				<option value="">Select</option>
