--- a/CreateUser/index.html
+++ b/CreateUser/index.html
@@ -1,49 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <title>Create User</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="script1.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
-  <body class="container">
+  <body>
+  <a href="D:\Capstone Project\Capstone-Project-Frontend\Dashboard\index.html"><img src="D:\Capstone Project\logo.png" alt="Logo" class="logo"></a>
 
 
-    <div class="jumbotron">
-      <a href="D:\Capstone Project\Capstone-Project-Frontend\Dashboard\index.html"><img src="D:\Capstone Project\logo.png" alt="Logo" class="logo"></a>
-      <h1 class="display-4">Allied Personal Finance Tracker</h1>
-    </div>
+    <h2 class="heading">Allied Personal Finance Tracker</h2>
 
-    <div class="row justify-content-left">
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <form id="user-form">
-              <h2 style="height: fit-content;">Create User</h2>
-              <p>If already a user  <a href="D:\Capstone Project\Capstone-Project-Frontend\login\index.html"> Click here</a></p>
-              <div class="form-group">
+          <div class="container">
+            <form id="user-form" class="col-md-3">
+              <h1>Create User</h1>
+              <br>
+              <p>Already a user? <a href="D:\Capstone Project\Capstone-Project-Frontend\login\index.html"> Sign in</a></p>
+
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" class="form-control" required>
-              </div>
-              <div class="form-group">
+              <br>
+
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" class="form-control" required>
-              </div>
-              <div class="form-group">
+              <br>
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" minlength="8" class="form-control" required>
                 <span id="password-error" class="error-message"></span>
-              </div>
+              <br>
               <button type="submit" id="signup-btn" class="btn btn-primary" disabled>Sign Up</button>
             </form>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-3 ">
         <img src="D:\Capstone Project\kumbh-kalash.png" alt="Logo" class="img-fluid">
-      </div>
-    </div>
+
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
