--- a/login/index.html
+++ b/login/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    
     <meta charset="UTF-8">
     <title>Login Screen</title>
     <link rel="stylesheet" href="style.css">
@@ -10,13 +11,14 @@
     <a href="D:\Capstone Project\Capstone-Project-Frontend\Dashboard\index.html"><img src="D:\Capstone Project\logo.png" alt="Logo" class="logo"></a>
   
     <h2 class="heading">Allied Personal Finance Tracker</h2>
+    
     <div class="container">
       <form class="col-md-3">
         <h1>Login</h1>
-        <p>Not a User already<a href="D:\Capstone Project\Capstone-Project-Frontend\CreateUser\index.html">Sign Up</a></p>
+        <br>
+        <p>Not a user yet? <a href="D:\Capstone Project\Capstone-Project-Frontend\CreateUser\index.html">Sign up</a></p>
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
-        <br>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
         <p><a href="D:\Capstone Project\Capstone-Project-Frontend\ForgotPassword\index.html">Forgot Password</a></p>
@@ -29,5 +31,5 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="app.js"></script>
   </body>
-  
+</html>  
 
