--- a/savings/index.html
+++ b/savings/index.html
@@ -1,33 +1,88 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Savings Table</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+  <title>Savings Form</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div id="app">
-    <table class="table">
+  <h2>Savings Form</h2>
+  <form id="savingsForm">
+    <label for="category">Category:</label>
+    <input type="text" id="category" name="category" required><br><br>
+
+    <label for="goal">Goal:</label>
+    <input type="number" id="goal" name="goal" step="0.01" required><br><br>
+
+    <label for="currAmt">Current Amount:</label>
+    <input type="number" id="currAmt" name="currAmt" step="0.01" required><br><br>
+
+    <label for="target">Target Date:</label>
+    <input type="date" id="target" name="target" required><br><br>
+
+    <label for="userId">User ID:</label>
+    <input type="number" id="userId" name="userId" required><br><br>
+
+    <button type="submit">Submit</button>
+  </form>
+
+
+  <div class="container">
+    <h2>Savings Table</h2>
+    <table id="savingsTable" class="table">
       <thead>
         <tr>
           <th>Category</th>
           <th>Goal</th>
           <th>Current Amount</th>
           <th>Target</th>
-          <th>User ID</th>
-          <th>User Name</th>
-          <th>User Email</th>
+          <th>Processed Date</th>
+          <th>Progress</th>
         </tr>
       </thead>
       <tbody>
-        <!-- Data will be dynamically inserted here -->
+        <!-- Table rows will be dynamically added using JavaScript -->
       </tbody>
     </table>
   </div>
-  <div class="progress">
-    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
-  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-14">
+        <section class="grid">
+			<h1>Finances</h1>
+          
+
+            <button type="button" class="btn btn-info btn-sm exampleModalLabel" data-toggle="modal" data-target="#myModal" >
+              Enter Finance
+            </button>
+
+            <button id="exportButton" class="btn btn-info btn-sm exampleModalLabel">
+            <a href="javascript:demoFromHTML()" class="button">Download Pdf</a></button>
+            <div id="content">
+                <!-- <p> -->
+
+            <div class="row mt-3">
+            <table class="table table-bordered table-container" id="tableInvoice">
+              <thead>
+                <tr>
+                  <th> Sr no,</th>
+                  <th>Category</th>
+                  <th>Goal</th>
+                  <th>Current Amount</th>
+                  <th>Target</th>
+                  <th>Processed Date</th>
+                  <th>Progress</th>
+                </tr>
+              </thead>
+              <tbody>
+              </tbody>
+            </table>      
+          </div>
+  
+
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="app.js"></script>
+	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+  <script src="script.js"></script>
 </body>
 </html>
